--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -7,6 +7,10 @@ on:
       - homolog
       - prod
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   pull_request:
     if: ${{ github.ref_name != 'prod'}}
